layout/style/test/test_mq_prefers_reduced_motion_dynamic.html fails under e10s
Categories
(GeckoView Graveyard :: Sandboxing, defect, P1)
Tracking
(firefox67 fixed)
Tracking | Status | |
---|---|---|
firefox67 | --- | fixed |
People
(Reporter: snorp, Assigned: hiro)
References
Details
Attachments
(1 file)
It looks like test_mq_prefers_reduced_motion_dynamic.html does some things to mock certain "reduced motion" preferences, but this doesn't work with GeckoView in e10s mode. The mocked values are set in the parent process, but the content process doesn't use them.
Assignee | ||
Comment 2•6 years ago
|
||
It seems to me that the value is set via PuppetWidget, but we might use a different nsLookAndFeel instance? I am not sure yet, but will debug it.
Comment 3•6 years ago
|
||
P1 because this test failure blocks GeckoView mochitests. If this particular test case is not critical, we can temporarily disable this it.
Assignee | ||
Comment 4•6 years ago
|
||
This should work;
https://hg.mozilla.org/try/rev/080d3c975510be462193e4d4b94ca09d4a0679ba
What we needed there is to set the prefers reduced motion value for test to the nsLookAndFeel instance in the child process as well as the one in the parent process.
Assignee | ||
Comment 5•6 years ago
|
||
So that we can query the test value in the child process properly.
Note that the APIs used for setting the prefers-reduced-motion value for testing
are only used on Android and MacOSX. As for MacOSX we have a different
machinery (see bug 1486971) to deliver the test value without spinning native
event loop in the child process so the change here is valid only for Android.
Comment 7•6 years ago
|
||
bugherder |
Comment 8•3 years ago
|
||
Moving some e10s bugs to the new GeckoView::Sandboxing component.
Updated•9 months ago
|
Description
•