widget/android/nsLookAndFeel.cpp
@@ -21,9 +21,6 @@ AndroidSystemColors nsLookAndFeel::mSystemColors;
 bool nsLookAndFeel::mInitializedShowPassword = false;
 bool nsLookAndFeel::mShowPassword = true;
 
-bool nsLookAndFeel::mIsInPrefersReducedMotionForTest = false;
-bool nsLookAndFeel::mPrefersReducedMotionForTest = false;
-
 static const char16_t UNICODE_BULLET = 0x2022;
 
 nsLookAndFeel::nsLookAndFeel() : nsXPLookAndFeel() {}
@@ -389,8 +386,8 @@ nsresult nsLookAndFeel::GetIntImpl(IntID aID, int32_t& aResult) {
       break;
 
     case eIntID_PrefersReducedMotion:
-      if (mIsInPrefersReducedMotionForTest) {
-        aResult = mPrefersReducedMotionForTest ? 1 : 0;
+      if (sIsInPrefersReducedMotionForTest) {
+        aResult = sPrefersReducedMotionForTest ? 1 : 0;
         break;
       }
       aResult = java::GeckoSystemStateListener::PrefersReducedMotion() ? 1 : 0;
