widget/android/nsLookAndFeel.h
@@ -27,22 +27,11 @@ class nsLookAndFeel final : public nsXPLookAndFeel {
   virtual void SetIntCacheImpl(
       const nsTArray<LookAndFeelInt>& aLookAndFeelIntCache) override;
 
-  void SetPrefersReducedMotionOverrideForTest(bool aValue) {
-    mIsInPrefersReducedMotionForTest = true;
-    mPrefersReducedMotionForTest = aValue;
-  }
-  void ResetPrefersReducedMotionOverrideForTest() {
-    mIsInPrefersReducedMotionForTest = false;
-    mPrefersReducedMotionForTest = false;
-  }
-
  protected:
   static bool mInitializedSystemColors;
   static mozilla::AndroidSystemColors mSystemColors;
   static bool mInitializedShowPassword;
   static bool mShowPassword;
-  static bool mIsInPrefersReducedMotionForTest;
-  static bool mPrefersReducedMotionForTest;
 
   nsresult GetSystemColors();
 
