widget/nsXPLookAndFeel.h
@@ -80,6 +80,15 @@ class nsXPLookAndFeel : public mozilla::LookAndFeel {
 
   virtual void NativeInit() = 0;
 
+  void SetPrefersReducedMotionOverrideForTest(bool aValue) {
+    sIsInPrefersReducedMotionForTest = true;
+    sPrefersReducedMotionForTest = aValue;
+  }
+  void ResetPrefersReducedMotionOverrideForTest() {
+    sIsInPrefersReducedMotionForTest = false;
+    sPrefersReducedMotionForTest = false;
+  }
+
  protected:
   nsXPLookAndFeel();
 
@@ -111,6 +120,9 @@ class nsXPLookAndFeel : public mozilla::LookAndFeel {
 
   static nsXPLookAndFeel* sInstance;
   static bool sShutdown;
+
+  static bool sIsInPrefersReducedMotionForTest;
+  static bool sPrefersReducedMotionForTest;
 
   // True if we shouldn't clear the cache value in RefreshImpl().
   // NOTE: This should be used only for testing.
